--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dbt-redshift = {version = ">=0.20,<2.0.0", optional = true}
 dbt-postgres = {version = ">=0.20,<2.0.0", optional = true}
 dbt-databricks = {version = ">=0.20,<2.0.0", optional = true}
 dbt-spark = {version = ">=0.20,<2.0.0", optional = true}
+dbt-athena-community = {version = ">=1.6.3,<2.0.0", optional = true}
 
 [tool.poetry.extras]
 snowflake = ["dbt-snowflake"]
@@ -46,6 +47,7 @@ redshift = ["dbt-redshift"]
 postgres = ["dbt-postgres"]
 databricks = ["dbt-databricks"]
 spark = ["dbt-spark"]
+athena = ["dbt-athena-community"]
 all = ["dbt-snowflake", "dbt-bigquery", "dbt-redshift", "dbt-postgres", "dbt-databricks", "dbt-spark"]
 
 [build-system]
