--- a/.github/workflows/test-all-warehouses.yml
+++ b/.github/workflows/test-all-warehouses.yml
@@ -36,6 +36,7 @@ jobs:
             redshift,
             databricks,
             databricks_catalog,
+            athena,
           ]
     uses: ./.github/workflows/test-warehouse.yml
     with:
