--- a/.github/workflows/test-all-warehouses.yml
+++ b/.github/workflows/test-all-warehouses.yml
@@ -1,7 +1,7 @@
 name: Test all warehouse platforms
 on:
   schedule:
-    - cron: "0 */8 * * *"
+    - cron: "0 3 * * *"
   workflow_dispatch:
     inputs:
       elementary-ref:
