--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ pydantic = "<2.0"
 networkx = ">=2.3,<3"
 packaging = ">=20.9,<=23.1"
 azure-storage-blob = ">=12.11.0"
+pymsteams = ">=0.2.2,<1.0.0"
+retry = ">=0.9.2,<1.0.0"
 
 dbt-snowflake = {version = ">=0.20,<2.0.0", optional = true}
 dbt-bigquery = {version = ">=0.20,<2.0.0", optional = true}
