--- a/mypy.ini
+++ b/mypy.ini
@@ -14,3 +14,9 @@ ignore_missing_imports = True
 
 [mypy-posthog]
 ignore_missing_imports = True
+
+[mypy-pydantic]
+ignore_missing_imports = True
+
+[mypy-networkx]
+ignore_missing_imports = True
