--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ documentation = "https://docs.elementary-data.com"
 packages = [{include = "elementary"}]
 
 [tool.poetry.dependencies]
-python = ">=3.6.2"
+python = ">=3.9,<4"
 click = ">=7.0,<8.1.4"
 pyfiglet = "<1.0.0"
 dbt-core = ">=0.20,<2.0.0"
@@ -55,9 +55,47 @@ spark = ["dbt-spark"]
 athena = ["dbt-athena-community"]
 all = ["dbt-snowflake", "dbt-bigquery", "dbt-redshift", "dbt-postgres", "dbt-databricks", "dbt-spark"]
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0.2"
+pre-commit = "^3.6.2"
+mypy = "^1.8.0"
+types-pkg-resources = "^0.1.3"
+networkx-stubs = "^0.0.1"
+types-python-dateutil = "^2.8.19.20240106"
+boto3-stubs = "^1.34.56"
+google-auth-stubs = "^0.2.0"
+ratelimit-stubs = "^2.2.1"
+types-google-cloud-ndb = "^2.2.0.20240205"
+types-protobuf = "^4.24.0.20240302"
+types-pytz = "^2024.1.0.20240203"
+types-jsonschema = "^4.21.0.20240118"
+types-pyyaml = "^6.0.12.12"
+types-setuptools = "^69.1.0.20240302"
+pandas-stubs = "^2.2.0.240218"
+types-retry = "^0.9.9.4"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 edr = "elementary.cli.cli:cli"
+
+[tool.black]
+line-length = 120
+target-version = ['py39', 'py310', 'py311', 'py312']
+include = '\.pyi?$'
+
+[tool.flake8]
+files = '.*\.py'
+max-line-length = 120
+exclude = ['.git', '.eggs', '__pycache__', 'venv', '.venv']
+ignore = [
+    "W503",
+    "E203",
+    "E501"
+]
+
+[tool.mypy]
+packages = ["elementary"]
+exclude = ['^elementary/monitor/dbt_project/']
