ELE-489 Support dbt-trino connector (#1378)
* ELE-489 Support dbt-trino connector

* Force get_adapter_type_and_unique_id to fail, therefore setting warehouse_type to null

* Bump internal dbt-data-reliability Package

* get_adapter_type_and_unique_id - fix for athena and trino

* link_local_elementary_dbt_pkg: bugfix

* add (temporarily) new index html

* pyproject: reduce dbt-trino lower version limit

* Update index.html to v1.0.18

* update dbt package ref

---------

Co-authored-by: Itamar Hartstein <haritamar@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dbt-postgres = {version = ">=0.20,<2.0.0", optional = true}
 dbt-databricks = {version = ">=0.20,<2.0.0", optional = true}
 dbt-spark = {version = ">=0.20,<2.0.0", optional = true}
 dbt-athena-community = {version = ">=1.6.3,<2.0.0", optional = true}
+dbt-trino = {version = ">=1.5.0,<2.0.0", optional = true}
 
 [tool.poetry.extras]
 snowflake = ["dbt-snowflake"]
@@ -52,6 +53,7 @@ postgres = ["dbt-postgres"]
 databricks = ["dbt-databricks"]
 spark = ["dbt-spark"]
 athena = ["dbt-athena-community"]
+trino = ["dbt-trino"]
 all = ["dbt-snowflake", "dbt-bigquery", "dbt-redshift", "dbt-postgres", "dbt-databricks", "dbt-spark"]
 
 [build-system]
