--- a/.github/workflows/test-github-action.yml
+++ b/.github/workflows/test-github-action.yml
@@ -109,7 +109,7 @@ jobs:
       always() &&
       ! cancelled() &&
       ! contains(needs.test.result, 'success') &&
-      ! contains(needs.test.result, 'cancelled')
+      ! contains(needs.test.result, 'cancelled') &&
       ${{ github.event_name == 'schedule' }}
     uses: ./.github/workflows/notify_slack.yml
     with:
