--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ var/
 logs/
 .venv
 poetry.lock
+package-lock.yml
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
