Revert "comment out upstream elementary-data dependency"
This reverts commit f2dab9347c9327a15c935d141c2ac1373b69cf45.

--- a/elementary/monitor/dbt_project/packages.yml
+++ b/elementary/monitor/dbt_project/packages.yml
@@ -1,8 +1,8 @@
 packages:
   - package: dbt-labs/dbt_utils
     version: [">=0.8.0", "<2.0.0"]
-  # - package: elementary-data/elementary
-  #   version: 0.15.1
+  - package: elementary-data/elementary
+    version: 0.15.1
 
   #  NOTE - for unreleased CLI versions we often need to update the package version to a commit hash (please leave this
   #  commented, so it will be easy to access)
