dbt_runner: make sure we don't fail on unrelated logs

--- a/tests/tests_with_db/pytest.ini
+++ b/tests/tests_with_db/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+addopts = --ignore=dbt_project
 markers =
     skip_targets(targets): skip test for the given targets
     only_on_targets(targets): skip test for non given targets
