--- a/.github/workflows/create_pylon_issue.yml
+++ b/.github/workflows/create_pylon_issue.yml
@@ -38,7 +38,9 @@ jobs:
         run: |
           issue_body=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}" | jq -r '.body')
-          new_body="$issue_body\n\n<!-- pylon_ticket_id: ${{ env.ticket_id }} -->"
+          echo "body: $issue_body"
+          new_body="$issue_body\n\n<!-- pylon-ticket-id: ${{ env.ticket_id }} -->"
+          echo "new body: new_body"
           curl -X PATCH -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/json" \
             -d "{\"body\": \"$new_body\"}" \
