--- a/.github/workflows/create_pylon_issue.yml
+++ b/.github/workflows/create_pylon_issue.yml
@@ -40,7 +40,7 @@ jobs:
             "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}" | jq -r '.body')
           echo "body: $issue_body"
           new_body="$issue_body\n\n<!-- pylon-ticket-id: ${{ env.ticket_id }} -->"
-          json_body=$(jq -R -s --arg body "new_body" '{"body": $body}' <<< "$new_body")
+          json_body=$(jq -R -s --arg body "$new_body" '{"body": $body}' <<< "$new_body")
           echo "json body: $json_body"
           curl -X PATCH -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/json" \
