--- a/.github/workflows/create_pylon_issue.yml
+++ b/.github/workflows/create_pylon_issue.yml
@@ -38,10 +38,8 @@ jobs:
         run: |
           issue_body=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}" | jq -r '.body')
-          echo "body: $issue_body"
-          new_body="$issue_body\n\n<!-- pylon-ticket-id: ${{ env.ticket_id }} -->"
+          new_body="$issue_body<!-- pylon-ticket-id: ${{ env.ticket_id }} -->"
           json_body=$(jq -R -s --arg body "$new_body" '{"body": $body}' <<< "$new_body")
-          echo "json body: $json_body"
           curl -X PATCH -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/json" \
             -d "$json_body" \
