--- a/.github/workflows/update_pylon_issue.yml
+++ b/.github/workflows/update_pylon_issue.yml
@@ -24,7 +24,7 @@ jobs:
                        "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}" | jq -r '.body')
 
           # Assuming ticket ID is stored as a hidden attribute like <!-- Ticket ID: 12345 -->
-          pylon_ticket_id=$(echo "$ISSUE_BODY" | grep -oP '(?<=<!-- pylon-ticket-id: )\d+(?= -->)')
+          pylon_ticket_id=$(echo "$ISSUE_BODY" | grep -oP '(?<=<!-- pylon-ticket-id: )\b[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}\b(?= -->)')
           echo $pylon_ticket_id
         fi
 
