--- a/.github/workflows/update_pylon_issue.yml
+++ b/.github/workflows/update_pylon_issue.yml
@@ -17,6 +17,22 @@ jobs:
         echo "Comment Body: ${{ github.event.comment.body }}"
         if [[ "${{ github.event.issue.pull_request }}" != "" ]]; then
           echo "This is a pull request comment."
+          # Extract ticket ID from pull request body
+          PR_BODY=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                     "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.issue.number }}" | jq -r '.body')
+          echo "Pull Request Body:"
+          echo "$PR_BODY"
+
+          pylon_ticket_id=$(echo "$PR_BODY" | grep -oP '(?<=<!-- pylon-ticket-id: )\b[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}\b(?= -->)')
+          echo "Extracted Ticket ID: $pylon_ticket_id"
+
+          curl --request PATCH \
+            --url "https://api.usepylon.com/issues/$pylon_ticket_id" \
+            --header "Authorization: ${{ secrets.PYLON_API_KEY }}" \
+            --header 'Content-Type: application/json' \
+            --data '{
+              "state": "waiting_on_you"
+            }'
         else
           echo "This is an issue comment."
           # Extract ticket ID from issue body
