--- a/elementary/monitor/dbt_project/packages.yml
+++ b/elementary/monitor/dbt_project/packages.yml
@@ -1,10 +1,12 @@
 packages:
   - package: dbt-labs/dbt_utils
     version: [">=0.8.0", "<0.9.0"]
-  - package: elementary-data/elementary
-    version: 0.15.1
+  - git: https://github.com/elementary-data/dbt-data-reliability.git
+    revision: abb72783768dc0b5743f565d16ee812e8315378f
+  # - package: elementary-data/elementary
+  #   version: 0.15.1
 
   #  NOTE - for unreleased CLI versions we often need to update the package version to a commit hash (please leave this
   #  commented, so it will be easy to access)
   # - git: https://github.com/elementary-data/dbt-data-reliability.git
-  #   revision: 449da8f16976889ebb8dcce441bfb461b924f008
+  #   revision: abb72783768dc0b5743f565d16ee812e8315378f
