--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ packaging = ">=20.9,<=24.0"
 azure-storage-blob = ">=12.11.0"
 pymsteams = ">=0.2.2,<1.0.0"
 pandas = ">=2.0.0"
+numpy = "<2.0.0"
 tabulate = ">= 0.9.0"
 
 dbt-snowflake = {version = ">=0.20,<2.0.0", optional = true}
