--- a/elementary/monitor/dbt_project/packages.yml
+++ b/elementary/monitor/dbt_project/packages.yml
@@ -1,10 +1,10 @@
 packages:
   - package: dbt-labs/dbt_utils
     version: [">=0.8.0", "<0.9.0"]
-  - package: elementary-data/elementary
-    version: 0.16.0
+  # - package: elementary-data/elementary
+    # version: 0.16.0
 
   #  NOTE - for unreleased CLI versions we often need to update the package version to a commit hash (please leave this
   #  commented, so it will be easy to access)
-  # - git: https://github.com/elementary-data/dbt-data-reliability.git
-  #   revision: 42fb88ca59a06c945fb56cb16c66af588fa079fa
+  - git: https://github.com/elementary-data/dbt-data-reliability.git
+    revision: a2a813792924172b706c37d9309911e6fc37dc66
