Add new debug configurations for pytest in launch.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,29 @@
       "module": "elementary.cli.cli",
       "console": "integratedTerminal",
       "args": "${command:pickArgs}"
+    },
+    {
+      "name": "pytest: Current File",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "pytest",
+      "args": ["-vvv", "-s", "${file}"],
+      "console": "integratedTerminal"
+    },
+    {
+      "name": "pytest: Selector",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "pytest",
+      "args": ["-vvv", "-s", "${file}::${input:selector}"],
+      "console": "integratedTerminal"
+    }
+  ],
+  "inputs": [
+    {
+      "id": "selector",
+      "type": "promptString",
+      "description": "Selector"
     }
   ]
 }
