Migrate dev dependencies from requirements.txt to pyproject.toml
- Removed dev-requirements.txt file
- Moved development dependencies to poetry's group.dev.dependencies in pyproject.toml
- Updated GitHub Actions workflows to use poetry for installing dev dependencies and extras
- Maintained existing development dependency versions

--- a/.github/workflows/test-github-action.yml
+++ b/.github/workflows/test-github-action.yml
@@ -60,8 +60,8 @@ jobs:
 
       - name: Install Elementary
         run: |
-          pip install -r dev-requirements.txt
-          pip install ".[snowflake]"
+          pip install poetry
+          poetry install --with dev --extras snowflake
 
       - name: Install dbt package
         run: |
