--- a/.github/workflows/test-warehouse.yml
+++ b/.github/workflows/test-warehouse.yml
@@ -120,8 +120,8 @@ jobs:
 
       - name: Install Elementary
         run: |
-          pip install -r dev-requirements.txt
-          pip install ".[${{ (inputs.warehouse-type == 'databricks_catalog' && 'databricks') || inputs.warehouse-type }}]"
+          pip install poetry
+          poetry install --with dev --extras ${{ (inputs.warehouse-type == 'databricks_catalog' && 'databricks') || inputs.warehouse-type }}
 
       - name: Write dbt profiles
         env:
