--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ azure-storage-blob = ">=12.11.0"
 pymsteams = ">=0.2.2,<1.0.0"
 numpy = "<2.0.0"
 tabulate = ">= 0.9.0"
+pytz = "^2025.1"
 
 dbt-snowflake = {version = ">=0.20,<2.0.0", optional = true}
 dbt-bigquery = {version = ">=0.20,<2.0.0", optional = true}
