--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,11 @@ pandas = ">=2.0.0"
 numpy = "<2.0.0"
 tabulate = ">= 0.9.0"
 
+Jinja2 = ">=3.1.5"
+oauthlib = ">=3.2.2"
+requests_oauthlib = ">=2.0.0"
+simplejson = ">=3.19.3"
+
 dbt-snowflake = {version = ">=0.20,<2.0.0", optional = true}
 dbt-bigquery = {version = ">=0.20,<2.0.0", optional = true}
 dbt-redshift = {version = ">=0.20,<2.0.0", optional = true}
