Update GitHub Actions workflow artifact naming
Modify artifact names in test-warehouse.yml to include:
- dbt version
- warehouse type
- branch name

This provides more detailed and distinguishable artifact names for test reports and logs

--- a/.github/workflows/test-warehouse.yml
+++ b/.github/workflows/test-warehouse.yml
@@ -184,7 +184,7 @@ jobs:
       - name: Upload report artifact
         uses: actions/upload-artifact@v4
         with:
-          name: report_${{ inputs.warehouse-type }}_${{ env.BRANCH_NAME }}.html
+          name: report_${{ inputs.warehouse-type }}_${{ env.BRANCH_NAME }}_dbt_${{ inputs.dbt-version }}.html
           path: elementary/edr_target/elementary_report.html
 
       - name: Write GCS keyfile
@@ -220,7 +220,7 @@ jobs:
         if: ${{ always() }}
         uses: actions/upload-artifact@v4
         with:
-          name: edr.log
+          name: edr_${{ inputs.warehouse-type }}_${{ env.BRANCH_NAME }}_dbt_${{ inputs.dbt-version }}.log
           path: elementary/edr_target/edr.log
 
       - name: Run Python package e2e tests
