--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ documentation = "https://docs.elementary-data.com"
 packages = [{include = "elementary"}]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4"
+# matches the versions supported by dbt as of v1.9, which are probably due to the limits of numpy 1.26.x
+python = ">=3.9,<3.13"
 click = ">=7.0,<9.0"
 dbt-core = ">=0.20,<2.0.0"
 requests = ">=2.28.1,<3.0.0"
