--- a/.github/workflows/run-precommit.yml
+++ b/.github/workflows/run-precommit.yml
@@ -1,17 +1,14 @@
 name: Run pre-commit hooks
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
 
 jobs:
   code-quality:
     runs-on: ubuntu-latest
-    environment: elementary_test_env
     steps:
       - name: Checkout Elementary
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Set up Python
         uses: actions/setup-python@v4.3.0
