--- a/.github/workflows/test-main-warehouse.yml
+++ b/.github/workflows/test-main-warehouse.yml
@@ -1,6 +1,6 @@
 name: Test main warehouse platform
 on:
-  pull_request:
+  pull_request_target:
     branches: ["master"]
     paths:
       - elementary/**
@@ -13,4 +13,5 @@ jobs:
     uses: ./.github/workflows/test-warehouse.yml
     with:
       warehouse-type: postgres
+      elementary-ref: ${{ (github.event_name == 'pull_request_target' && github.event.pull_request.head.sha) || '' }}
     secrets: inherit
