--- a/.github/workflows/create_pylon_issue.yml
+++ b/.github/workflows/create_pylon_issue.yml
@@ -3,16 +3,13 @@ name: Create Pylon Issue
 on:
   issues:
     types: [opened]
-  pull_request:
+  pull_request_target:
     types: [opened]
 
 jobs:
   create_pylon_issue:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repository
-        uses: actions/checkout@v2
-
       - name: Install jq
         run: sudo apt-get install -y jq
 
@@ -46,7 +43,7 @@ jobs:
             "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}"
 
       - name: Create Pylon Issue for Pull Request
-        if: github.event_name == 'pull_request'
+        if: contains(github.event_name, 'pull_request')
         run: |
           response=$(curl --request POST \
             --url https://api.usepylon.com/issues \
