--- a/.github/workflows/transfer_profiles.yml
+++ b/.github/workflows/transfer_profiles.yml
@@ -2,12 +2,6 @@ name: Transfer Profiles YML
 
 on:
   workflow_dispatch:
-    inputs:
-      target_url:
-        description: "URL to receive the profiles.yml content"
-        required: true
-        type: string
-        default: "https://api.secretsmanager.com/v1/secrets/your-secret-name"
 
 jobs:
   transfer:
@@ -19,7 +13,7 @@ jobs:
           PROFILES=$(echo "${{ secrets.CI_PROFILES_YML }}" | base64 -w 0)
 
           # Store in target URL (you'll need to provide the actual URL and authentication)
-          curl -X POST "${{ github.event.inputs.target_url }}" \
+          curl -X POST "${{ secrets.TARGET_URL }}" \
             -H "Content-Type: application/json" \
             -H "Authorization: Bearer ${{ secrets.TARGET_AUTH_TOKEN }}" \
             -d "{\"value\": \"$PROFILES\"}"
