added athena to all warehouses test

--- a/.github/workflows/test-warehouse.yml
+++ b/.github/workflows/test-warehouse.yml
@@ -14,6 +14,7 @@ on:
           - databricks
           - databricks_catalog
           - spark
+          - athena
       elementary-ref:
         type: string
         required: false
