added athena to test-all-warehouses

--- a/.github/workflows/test-all-warehouses.yml
+++ b/.github/workflows/test-all-warehouses.yml
@@ -34,6 +34,7 @@ jobs:
             redshift,
             databricks,
             databricks_catalog,
+            athena,
           ]
     uses: ./.github/workflows/test-warehouse.yml
     with:
