--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -55,6 +55,7 @@ jobs:
             databricks,
             databricks_catalog,
             athena,
+            clickhouse,
           ]
     needs: get-latest-release-tags
     uses: ./.github/workflows/test-warehouse.yml
