--- a/.github/workflows/test-warehouse.yml
+++ b/.github/workflows/test-warehouse.yml
@@ -15,6 +15,7 @@ on:
           - databricks_catalog
           - spark
           - athena
+          - clickhouse
       elementary-ref:
         type: string
         required: false
