--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ dbt-databricks = {version = ">=0.20,<2.0.0", optional = true}
 dbt-spark = {version = ">=0.20,<2.0.0", optional = true}
 dbt-athena-community = {version = ">=1.6.3,<2.0.0", optional = true}
 dbt-trino = {version = ">=1.5.0,<2.0.0", optional = true}
-
+dbt-clickhouse = {version = ">=0.20,<2.0.0", optional = true}
 [tool.poetry.extras]
 snowflake = ["dbt-snowflake"]
 bigquery = ["dbt-bigquery"]
@@ -53,8 +53,9 @@ postgres = ["dbt-postgres"]
 databricks = ["dbt-databricks"]
 spark = ["dbt-spark"]
 athena = ["dbt-athena-community"]
+clickhouse = ["dbt-clickhouse"]
 trino = ["dbt-trino"]
-all = ["dbt-snowflake", "dbt-bigquery", "dbt-redshift", "dbt-postgres", "dbt-databricks", "dbt-spark"]
+all = ["dbt-snowflake", "dbt-bigquery", "dbt-redshift", "dbt-postgres", "dbt-databricks", "dbt-spark", "dbt-clickhouse", "dbt-athena-community", "dbt-trino"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
