--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -66,11 +66,13 @@ jobs:
         run: |
           sed -i 's/version: [0-9][0-9]*\.[0-9][0-9]*\.[0-9][0-9]*$/version: ${{ needs.validate-version.outputs.validated-dbt-package-version }}/' ./elementary/monitor/dbt_project/packages.yml
           sed -i 's/version: [0-9][0-9]*\.[0-9][0-9]*\.[0-9][0-9]*$/version: ${{ needs.validate-version.outputs.validated-dbt-package-version }}/' ./docs/_snippets/quickstart-package-install.mdx
+          dbt deps
       - name: Bump version for package (using default)
         if: ${{ needs.validate-version.outputs.validated-dbt-package-version == ''}}
         run: |
           sed -i 's/version: [0-9][0-9]*\.[0-9][0-9]*\.[0-9][0-9]*$/version: ${{ needs.validate-version.outputs.default-dbt-package-version }}/' ./elementary/monitor/dbt_project/packages.yml
           sed -i 's/version: [0-9][0-9]*\.[0-9][0-9]*\.[0-9][0-9]*$/version: ${{ needs.validate-version.outputs.default-dbt-package-version }}/' ./docs/_snippets/quickstart-package-install.mdx
+          dbt deps
       - name: Commit changes
         run: git commit -am "release v${{ inputs.cli-version }}"
       - name: Push code
