--- a/.github/workflows/test-warehouse.yml
+++ b/.github/workflows/test-warehouse.yml
@@ -106,6 +106,11 @@ jobs:
         working-directory: ${{ env.DBT_PKG_INTEG_TESTS_DIR }}
         run: docker compose up -d postgres
 
+      - name: Start Clickhouse
+        if: inputs.warehouse-type == 'clickhouse'
+        working-directory: ${{ env.DBT_PKG_INTEG_TESTS_DIR }}
+        run: docker compose up -d clickhouse
+
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
