--- a/elementary/monitor/dbt_project/packages.yml
+++ b/elementary/monitor/dbt_project/packages.yml
@@ -8,4 +8,4 @@ packages:
   #  commented, so it will be easy to access)
   #- git: https://github.com/elementary-data/dbt-data-reliability.git
   #  revision: f22a2387d19dddd73c8a506d1a9cbb08204f83f9
-  #  When releasing a new version of the package, if the current version is using a commit hash, please update the version to the new version.
+  #  When releasing a new version of the package, if the current version is using a commit hash,  update the version to the new version.
