--- a/elementary/monitor/dbt_project/packages.yml
+++ b/elementary/monitor/dbt_project/packages.yml
@@ -1,11 +1,13 @@
 packages:
   - package: dbt-labs/dbt_utils
     version: [">=0.8.0", "<0.9.0"]
-  - package: elementary-data/elementary
-    version: 0.18.3
+  - git: https://github.com/elementary-data/dbt-data-reliability.git
+    revision: 59270ed6a84ed6d4e9d449bc2725643771389cae
 
   #  NOTE - for unreleased CLI versions we often need to update the package version to a commit hash (please leave this
   #  commented, so it will be easy to access)
   #- git: https://github.com/elementary-data/dbt-data-reliability.git
   #  revision: f22a2387d19dddd73c8a506d1a9cbb08204f83f9
   #  When releasing a new version of the package, if the current version is using a commit hash,  update the version to the new version.
+  #- package: elementary-data/elementary
+  #  version: 0.18.3
