--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,8 @@ dbt-snowflake = {version = ">=0.20,<2.0.0", optional = true}
 dbt-bigquery = {version = ">=0.20,<2.0.0", optional = true}
 dbt-redshift = {version = ">=0.20,<2.0.0", optional = true}
 dbt-postgres = {version = ">=0.20,<2.0.0", optional = true}
-dbt-databricks = {version = ">=0.20,<2.0.0", optional = true}
+# TODO: change back to <2.0.0 once we have a fix for https://github.com/elementary-data/elementary/issues/1931
+dbt-databricks = {version = ">=0.20,<1.10.2", optional = true}
 dbt-spark = {version = ">=0.20,<2.0.0", optional = true}
 dbt-athena-community = {version = ">=1.6.3,<2.0.0", optional = true}
 dbt-trino = {version = ">=1.5.0,<2.0.0", optional = true}
